--- a/index.html
+++ b/index.html
@@ -1,1 +1,341 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scake=1.0">
+	<link rel="stylesheet" href="style.css">
+	<title>やさいのヒント</title>
+	<!-- adobefont -->
+	<script>
+		(function(d) {
+		  var config = {
+			kitId: 'fmv4ski',
+			scriptTimeout: 3000,
+			async: true
+		  },
+		  h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
+		})(document);
+		</script>
+	<!-- swiper.js -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/><script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+	<!-- fontawesome -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+	<!-- luxy.js -->
+	<script type="text/javascript" src="js/luxy.min.js" charset="utf-8"></script>
+	<!-- sclollanimation -->
+	<script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
+	<!-- jquery -->
+	<script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
+</head>
+<body>
+
+<!-- ローディング画面 -->
+<div class="loader-bg">
+	<div class="loader">
+		<div class="sk-chase">
+			<div class="sk-chase-dot"></div>
+			<div class="sk-chase-dot"></div>
+			<div class="sk-chase-dot"></div>
+			<div class="sk-chase-dot"></div>
+			<div class="sk-chase-dot"></div>
+			<div class="sk-chase-dot"></div>
+		  </div>
+	</div>
+</div>
+
+<div id="ヘッダーfixed">
+	<div class="ヘッダー子要素fixed">
+		
+		<div class="ロゴ"><a href="index.html"><img class="ロゴ" src="/assets/images/ヘッダー用ロゴ.png"></a></div>
+		<div class="メニュー">
+			<div class="メニューp"><a href="about.html">やさいのヒントとは？</a></div>
+			<div class="メニューp"><a href="main.html">保存方法一覧</a></div>
+			<div class="メニューp"><a href="contact.html">お問い合わせ</a></div>
+		</div>
+
+
+	<div class="item">
+		<button class="menu-trigger" id="menu05">
+		  <span></span>
+		  <span></span>
+		  <span></span>
+		</button>
+	  </div>
+	  <div class="背景黒"></div>
+
+	  <div id="ハンバーガー">
+	  <div class="ハンバーガーメニュー">
+		<div class="ハンバーガーメニューp changetime01"><a href="about.html"><div style="font-size:0.4em;">ABOUT&nbspUS</div>やさいのヒントとは？</a></div>
+		<div class="ハンバーガーメニューp changetime02"><a href="main.html"><div style="font-size:0.4em;">HOW&nbspTO&nbspSTORE&nbspVEGETABLES</div>保存方法一覧</a></div>
+		<div class="ハンバーガーメニューp changetime03"><a href="contact.html"><div style="font-size:0.4em;">CONTACT</div>お問い合わせ</a></div>
+	</div>
+	</div>
+
+
+	</div>
+</div>
+
+<!-- トップへ戻るボタン -->
+<a id="pagetop" href="#"><i class="fa-solid fa-angle-up"></i></a>
+
+
+<!-- メインコンテンツ -->
+<div id="luxy">
+
+<div class="ヘッダー">
+
+		<div class="ヘッダー子要素 luxy-el" data-speed-y="40">
+			<div class="ロゴ"><a href="index.html"><img class="ロゴ" src="/assets/images/ヘッダー用ロゴ.png"></a></div>
+			<div class="メニュー">
+				<div class="メニューp"><a href="about.html">やさいのヒントとは？</a></div>
+				<div class="メニューp"><a href="main.html">保存方法一覧</a></div>
+				<div class="メニューp"><a href="contact.html">お問い合わせ</a></div>
+			</div>
+		</div>
+</div>
+
+<div class="メインビジュアル">
+	<div class="メインビジュアル画像">
+		<div class="タイトルロゴ luxy-el" data-speed-y="10" data-offset="0">
+			<img src="/assets/images/ロゴ.png">
+		</div>
+		<img class="やさい画像 なす レスポンシブ野菜大 luxy-el" data-speed-y="8" data-speed-x="4" data-horizontal="1" src="assets/images/なす.png">
+		<img class="やさい画像 トマ レスポンシブ野菜大 luxy-el"  data-speed-y="8" data-speed-x="-4" data-horizontal="1" src="assets/images/トマト.png">
+		<img class="やさい画像 ブロ レスポンシブ野菜大 luxy-el"  data-speed-y="8"  data-speed-x="8" data-horizontal="1" src="assets/images/ブロッコリー.png">
+		<img class="やさい画像 だい レスポンシブ野菜大 luxy-el" data-speed-y="-8"  data-speed-x="8" data-horizontal="1" src="assets/images/だいこん.png">
+		<img class="やさい画像 にん レスポンシブ野菜大 luxy-el" data-speed-y="-8" data-speed-x="-8" data-horizontal="1" src="assets/images/にんじん.png">
+		<img class="やさい画像 ごぼ レスポンシブ野菜大 luxy-el" data-speed-y="-8"  data-speed-x="-4" data-horizontal="1" src="assets/images/ごぼう.png">
+		<img class="やさい画像 小なす レスポンシブ野菜小 luxy-el" data-speed-y="-2" data-speed-x="-2" data-horizontal="1" src="assets/images/なす小.png">
+		<img class="やさい画像 小トマ レスポンシブ野菜小 luxy-el" data-speed-y="2" data-speed-x="2" data-horizontal="1" src="assets/images/トマト小.png">
+		<img class="やさい画像 小ブロ レスポンシブ野菜小 luxy-el" data-speed-y="-2" data-speed-x="-2" data-horizontal="1" src="assets/images/ブロッコリー小.png">
+		<img class="やさい画像 小だい レスポンシブ野菜小 luxy-el" data-speed-y="2" src="assets/images/だいこん小.png">
+		<img class="やさい画像 小にん レスポンシブ野菜小 luxy-el" data-speed-y="-2" data-speed-x="2" data-horizontal="1" src="assets/images/にんじん小.png">
+		<img class="やさい画像 小ごぼ レスポンシブ野菜小 luxy-el"  data-speed-y="2" data-speed-x="-2" data-horizontal="1" src="assets/images/ごぼう小.png">
+		<div class="付箋"></div>
+		<div class="スクロールダウン"><a href="#">Scroll<span></span></a></div>
+	</div>
+</div>
+
+<div class="セクション about">
+	<span class="サブタイトル">ABOUT&nbspUS</span>
+	<h2>やさいのヒントとは？</h2>
+	<div class="about画像">
+		<div class="about1 luxy-el" data-speed-y="-2" data-speed-x="-2" data-horizontal="1" ><img src="assets/images/about1.png"><img class="about4" src="assets/images/about4.png" style="width:100px;"><div class="copy1"><img src="assets/images/about4.png" style="width:80px;"></div></div>
+		<div class="about2 luxy-el"  data-speed-y="-2" data-speed-x="2" data-horizontal="1"><img src="assets/images/about2.png"><img class="about5" src="assets/images/about5.png" style="width:70px;"><div class="copy2"><img src="assets/images/about5.png" style="width:55px;"></div></div>
+		<img class="about3 luxy-el" data-speed-y="-2" data-offset="0" src="assets/images/about3.png">
+	</div>
+	<p>
+		やさいのヒントとは、やさいの保存方法をまとめたWEBサイトです。<br>
+		「野菜の下処理ってどうするの？」「どう保存すれば長持ちするのか分からない」「保存期間はどのくらいなのかな」<br>
+		こんなお悩みはありませんか？<br>
+		このWEBサイトでは、野菜の適切な下処理と保存方法を動画形式で分かりやすく紹介しています。
+	</p>
+	<a href="about.html"><div class="もっと見るボタン">もっと見る</div></a>
+</div>
+
+<div class="セクション">
+	<span class="サブタイトル">HOW&nbspTO&nbspSTORE&nbspVEGETABLES</span>
+	<h2>やさいの保存方法</h2>
+	<!-- Slider main container -->
+<div class="スライダー">
+<div class="swiper mySwiper">
+	<div class="swiper-wrapper">
+	  <div class="ホバー上 swiper-slide"><a href="tomato.html"><div class="カルーセル画像"><img src="assets/images/トマト.png" style="width:150px;"></div><p>トマト</p></div></a>
+	  <div class="ホバー上 swiper-slide"><a href="burokori.html"><div class="カルーセル画像"><img src="assets/images/ブロッコリー.png" style="width:150px; transform:rotate(10deg);"></div><p>ブロッコリー</p></div></a>
+	  <div class="ホバー上 swiper-slide"><a href="ninjin.html"><div class="カルーセル画像"><img src="assets/images/にんじん.png" style="height:140px;  transform:rotate(-40deg);"></div><p>にんじん</p></div></a>
+	  <div class="ホバー上 swiper-slide"><a href="nasu.html"><div class="カルーセル画像"><img src="assets/images/なす.png" style="height:180px;"></div><p>なす</p></div></a>
+	  <div class="ホバー上 swiper-slide"><a href="daikon.html"><div class="カルーセル画像"><img src="assets/images/だいこん.png" style="height:140px; transform:rotate(110deg);"></div><p>だいこん</p></div></a>
+	  <div class="ホバー上 swiper-slide"><a href="gobou.html"><div class="カルーセル画像"><img src="assets/images/ごぼう.png" style="height:200px;"></div><p>ごぼう</p></div></a>
+	</div>
+  </div>
+  <div class="swiper-button-next"><i class="fa-solid fa-chevron-right"></i></div>
+  <div class="swiper-button-prev"><i class="fa-solid fa-chevron-left"></i></div>
+</div>
+
+<a href="main.html"><div class="もっと見るボタン">もっと見る</div></a>
+</div>
+
+<div class="セクション">
+	<span class="サブタイトル">CONTACT</span>
+	<h2>お問い合わせ</h2>
+	<div class="お問い合わせカード">
+		<div><p>お問い合わせやご依頼は、お気軽に以下のフォームからご連絡ください。<br>一週間以内に返信いたします。</p>
+			<a href="contact.html"><div class="コンタクトボタン">お問い合わせはこちら</div></a></div>
+	</div>
+</div>
+<div class="コンタクトセクション2 luxy-el" data-speed-y="8"></div>
+
+<footer class="フッター">
+	<div class="ヘッダー子要素">
+		<div class="ロゴ"><a href="index.html"><img class="ロゴ" src="/assets/images/ヘッダー用ロゴ.png"></a></div>
+		<div class="メニュー">
+			<div class="メニューp"><a href="about.html">やさいのヒントとは？</a></div>
+			<div class="メニューp"><a href="main.html">保存方法一覧</a></div>
+			<div class="メニューp"><a href="contact.html">お問い合わせ</a></div>
+		</div>
+	</div>	
+	<div class="コピーライト">&copy 2023 Takagi Hikaru All Right Reserved.</div>
+</footer>
+
+
+</div>
+
+<script>// カルーセル
+		var swiper = new Swiper(".mySwiper", {
+		  slidesPerView: 1,
+		  spaceBetween: 30,
+		  loop: true,
+		  speed:800,
+		  pagination: {
+			el: ".swiper-pagination",
+			clickable: true,
+		  },
+		  navigation: {
+     		 nextEl: '.swiper-button-next',
+      		 prevEl: '.swiper-button-prev',
+    		},
+			autoplay: {
+        	 delay: 3000,
+       	 	 disableOnInteraction: false,
+     	 	},
+			  breakpoints: { // ブレークポイント
+    		600: { // 画面幅600px以上で適用
+      		slidesPerView: 2,
+    		},
+     		 1025: { // 画面幅1025px以上で適用
+      		slidesPerView: 3,
+    		}
+  			},
+		});
+</script>
+
+<script>// luxy
+	luxy.init();
+</script> 
+
+<script>// スクロールアニメーション
+ScrollReveal().reveal(".セクション h2", { 
+	duration: 1700,     // アニメーション時間(ミリ秒)
+	viewFactor: 0.6,    // 0〜1 画面のどれくらいが表示されたらアニメーションし始めるか
+	origin: 'bottom',   // 下から0.5
+	distance: '30px',  // 100px移動してくる
+	reset: true,        // 何回もアニメーションさせる
+})
+ScrollReveal().reveal(".サブタイトル", { 
+	duration: 1000,     // アニメーション時間(ミリ秒)
+	viewFactor: 0.6,    // 0〜1 画面のどれくらいが表示されたらアニメーションし始めるか
+	origin: 'bottom',   // 下から
+	distance: '30px',  // 100px移動してくる
+	reset: true,        // 何回もアニメーションさせる
+})
+ScrollReveal().reveal(".もっと見るボタン", { 
+	duration: 1000,     // アニメーション時間(ミリ秒)
+	viewFactor: 0.6,    // 0〜1 画面のどれくらいが表示されたらアニメーションし始めるか
+	scale: '0.8',   // 下から
+	reset: true,        // 何回もアニメーションさせる
+})
+ScrollReveal().reveal(".about4", { 
+	duration: 2000,     // アニメーション時間(ミリ秒)
+	viewFactor: 0.9,    // 0〜1 画面のどれくらいが表示されたらアニメーションし始めるか
+	scale: '0.9',   // 下から
+	reset: true,        // 何回もアニメーションさせる
+})
+ScrollReveal().reveal(".about5", { 
+	duration: 2000,     // アニメーション時間(ミリ秒)
+	viewFactor: 0.9,    // 0〜1 画面のどれくらいが表示されたらアニメーションし始めるか
+	scale: '0.9',   // 下から
+	reset: true,        // 何回もアニメーションさせる
+})
+ScrollReveal().reveal(".スライダー", { 
+	duration: 1500,     // アニメーション時間(ミリ秒)
+	viewFactor: 0.5,    // 0〜1 画面のどれくらいが表示されたらアニメーションし始めるか
+	scale: '0.9',   // 下から
+	reset: false,        // 何回もアニメーションさせる
+})
+</script>
+
+<script>//　スクロール固定
+	(function() {//ヘッダー
+  const fh = document.getElementById('ヘッダーfixed');
+  window.addEventListener('scroll', () => {
+    if (window.pageYOffset > 800) {
+      fh.classList.add('is-show');
+    } else {
+      fh.classList.remove('is-show');
+    }
+  });
+}());
+(function() {//トップへ戻る
+  const fh = document.getElementById('pagetop');
+  window.addEventListener('scroll', () => {
+    if (window.pageYOffset > 800) {
+      fh.classList.add('is-show2');
+    } else {
+      fh.classList.remove('is-show2');
+    }
+  });
+}());
+</script>
+
+<script>// ローディング画面
+	$(function(){
+  //読み込みが完了したら実行する
+  $(window).on('load',function(){
+    //ローディングアニメーションをフェードアウト
+    $('.loader').delay(600).fadeOut(600);
+    //背景色をフェードアウト
+    $('.loader-bg').delay(900).fadeOut(800);
+});
+
+  //ページの読み込みが完了してなくても5秒後にアニメーションを非表示にする
+  setTimeout(function(){
+    $('.loader-bg').fadeOut(600);
+  },5000);
+});
+
+$(window).on('load',function(){// ローディングした後にロゴ出現
+    $('.タイトルロゴ').addClass('fadeIn');
+});
+$(window).on('load',function(){// ローディングした後にメインビジュアル野菜出現
+    $('.やさい画像').addClass('fadeIn2');
+});
+</script>
+
+<script>//トップへ戻るボタン
+	$('#pagetop').on('click', ()=>{
+    $('body,html').animate({ scrollTop: 0 }, 1000);
+    return false;   
+});
+</script>
+
+<script>//ハンバーガーメニュー
+$(function(){
+	$('.menu-trigger').on('click', function() {
+	  $(this).toggleClass('active');
+	  return false;
+	});
+  });
+
+  $(function() {
+    $(".menu-trigger").click(function() {
+        $(".ハンバーガーメニュー").toggleClass("none");
+    });
+});  
+
+$(function() {
+    $(".menu-trigger").click(function() {
+        $(".ハンバーガーメニューp").toggleClass("fadeUp");
+    });
+});
+
+$(function() {
+    $(".menu-trigger").click(function() {
+        $(".背景黒").toggleClass("黒");
+    });
+});
+ 
+ </script>
+
+</body>
+</html>
 
