--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <div id="ヘッダーfixed">
 	<div class="ヘッダー子要素fixed">
 		
-		<div class="ロゴ"><a href="index.html"><img class="ロゴ" src="/assets/images/ヘッダー用ロゴ.png"></a></div>
+		<div class="ロゴ"><a href="index.html"><img class="ロゴ" src="/assets/images/headerrogo.png"></a></div>
 		<div class="メニュー">
 			<div class="メニューp"><a href="about.html">やさいのヒントとは？</a></div>
 			<div class="メニューp"><a href="main.html">保存方法一覧</a></div>
@@ -85,7 +85,7 @@
 <div class="ヘッダー">
 
 		<div class="ヘッダー子要素 luxy-el" data-speed-y="40">
-			<div class="ロゴ"><a href="index.html"><img class="ロゴ" src="/assets/images/ヘッダー用ロゴ.png"></a></div>
+			<div class="ロゴ"><a href="index.html"><img class="ロゴ" src="/assets/images/headerrogo.png"></a></div>
 			<div class="メニュー">
 				<div class="メニューp"><a href="about.html">やさいのヒントとは？</a></div>
 				<div class="メニューp"><a href="main.html">保存方法一覧</a></div>
@@ -97,20 +97,20 @@
 <div class="メインビジュアル">
 	<div class="メインビジュアル画像">
 		<div class="タイトルロゴ luxy-el" data-speed-y="10" data-offset="0">
-			<img src="/assets/images/ロゴ.png">
+			<img src="/assets/images/rogo.png">
 		</div>
-		<img class="やさい画像 なす レスポンシブ野菜大 luxy-el" data-speed-y="8" data-speed-x="4" data-horizontal="1" src="assets/images/なす.png">
-		<img class="やさい画像 トマ レスポンシブ野菜大 luxy-el"  data-speed-y="8" data-speed-x="-4" data-horizontal="1" src="assets/images/トマト.png">
-		<img class="やさい画像 ブロ レスポンシブ野菜大 luxy-el"  data-speed-y="8"  data-speed-x="8" data-horizontal="1" src="assets/images/ブロッコリー.png">
-		<img class="やさい画像 だい レスポンシブ野菜大 luxy-el" data-speed-y="-8"  data-speed-x="8" data-horizontal="1" src="assets/images/だいこん.png">
-		<img class="やさい画像 にん レスポンシブ野菜大 luxy-el" data-speed-y="-8" data-speed-x="-8" data-horizontal="1" src="assets/images/にんじん.png">
-		<img class="やさい画像 ごぼ レスポンシブ野菜大 luxy-el" data-speed-y="-8"  data-speed-x="-4" data-horizontal="1" src="assets/images/ごぼう.png">
-		<img class="やさい画像 小なす レスポンシブ野菜小 luxy-el" data-speed-y="-2" data-speed-x="-2" data-horizontal="1" src="assets/images/なす小.png">
-		<img class="やさい画像 小トマ レスポンシブ野菜小 luxy-el" data-speed-y="2" data-speed-x="2" data-horizontal="1" src="assets/images/トマト小.png">
-		<img class="やさい画像 小ブロ レスポンシブ野菜小 luxy-el" data-speed-y="-2" data-speed-x="-2" data-horizontal="1" src="assets/images/ブロッコリー小.png">
-		<img class="やさい画像 小だい レスポンシブ野菜小 luxy-el" data-speed-y="2" src="assets/images/だいこん小.png">
-		<img class="やさい画像 小にん レスポンシブ野菜小 luxy-el" data-speed-y="-2" data-speed-x="2" data-horizontal="1" src="assets/images/にんじん小.png">
-		<img class="やさい画像 小ごぼ レスポンシブ野菜小 luxy-el"  data-speed-y="2" data-speed-x="-2" data-horizontal="1" src="assets/images/ごぼう小.png">
+		<img class="やさい画像 なす レスポンシブ野菜大 luxy-el" data-speed-y="8" data-speed-x="4" data-horizontal="1" src="assets/images/nasu.png">
+		<img class="やさい画像 トマ レスポンシブ野菜大 luxy-el"  data-speed-y="8" data-speed-x="-4" data-horizontal="1" src="assets/images/tomato.png">
+		<img class="やさい画像 ブロ レスポンシブ野菜大 luxy-el"  data-speed-y="8"  data-speed-x="8" data-horizontal="1" src="assets/images/burokori.png">
+		<img class="やさい画像 だい レスポンシブ野菜大 luxy-el" data-speed-y="-8"  data-speed-x="8" data-horizontal="1" src="assets/images/daikon.png">
+		<img class="やさい画像 にん レスポンシブ野菜大 luxy-el" data-speed-y="-8" data-speed-x="-8" data-horizontal="1" src="assets/images/ninjin.png">
+		<img class="やさい画像 ごぼ レスポンシブ野菜大 luxy-el" data-speed-y="-8"  data-speed-x="-4" data-horizontal="1" src="assets/images/gobou.png">
+		<img class="やさい画像 小なす レスポンシブ野菜小 luxy-el" data-speed-y="-2" data-speed-x="-2" data-horizontal="1" src="assets/images/nasumini.png">
+		<img class="やさい画像 小トマ レスポンシブ野菜小 luxy-el" data-speed-y="2" data-speed-x="2" data-horizontal="1" src="assets/images/tomatomini.png">
+		<img class="やさい画像 小ブロ レスポンシブ野菜小 luxy-el" data-speed-y="-2" data-speed-x="-2" data-horizontal="1" src="assets/images/burokorimini.png">
+		<img class="やさい画像 小だい レスポンシブ野菜小 luxy-el" data-speed-y="2" src="assets/images/daikonmini.png">
+		<img class="やさい画像 小にん レスポンシブ野菜小 luxy-el" data-speed-y="-2" data-speed-x="2" data-horizontal="1" src="assets/images/ninjinmini.png">
+		<img class="やさい画像 小ごぼ レスポンシブ野菜小 luxy-el"  data-speed-y="2" data-speed-x="-2" data-horizontal="1" src="assets/images/goboumini.png">
 		<div class="付箋"></div>
 		<div class="スクロールダウン"><a href="#">Scroll<span></span></a></div>
 	</div>
@@ -140,12 +140,12 @@
 <div class="スライダー">
 <div class="swiper mySwiper">
 	<div class="swiper-wrapper">
-	  <div class="ホバー上 swiper-slide"><a href="tomato.html"><div class="カルーセル画像"><img src="assets/images/トマト.png" style="width:150px;"></div><p>トマト</p></div></a>
-	  <div class="ホバー上 swiper-slide"><a href="burokori.html"><div class="カルーセル画像"><img src="assets/images/ブロッコリー.png" style="width:150px; transform:rotate(10deg);"></div><p>ブロッコリー</p></div></a>
-	  <div class="ホバー上 swiper-slide"><a href="ninjin.html"><div class="カルーセル画像"><img src="assets/images/にんじん.png" style="height:140px;  transform:rotate(-40deg);"></div><p>にんじん</p></div></a>
-	  <div class="ホバー上 swiper-slide"><a href="nasu.html"><div class="カルーセル画像"><img src="assets/images/なす.png" style="height:180px;"></div><p>なす</p></div></a>
-	  <div class="ホバー上 swiper-slide"><a href="daikon.html"><div class="カルーセル画像"><img src="assets/images/だいこん.png" style="height:140px; transform:rotate(110deg);"></div><p>だいこん</p></div></a>
-	  <div class="ホバー上 swiper-slide"><a href="gobou.html"><div class="カルーセル画像"><img src="assets/images/ごぼう.png" style="height:200px;"></div><p>ごぼう</p></div></a>
+	  <div class="ホバー上 swiper-slide"><a href="tomato.html"><div class="カルーセル画像"><img src="assets/images/tomato.png" style="width:150px;"></div><p>トマト</p></div></a>
+	  <div class="ホバー上 swiper-slide"><a href="burokori.html"><div class="カルーセル画像"><img src="assets/images/burokori.png" style="width:150px; transform:rotate(10deg);"></div><p>ブロッコリー</p></div></a>
+	  <div class="ホバー上 swiper-slide"><a href="ninjin.html"><div class="カルーセル画像"><img src="assets/images/ninjin.png" style="height:140px;  transform:rotate(-40deg);"></div><p>にんじん</p></div></a>
+	  <div class="ホバー上 swiper-slide"><a href="nasu.html"><div class="カルーセル画像"><img src="assets/images/nasu.png" style="height:180px;"></div><p>なす</p></div></a>
+	  <div class="ホバー上 swiper-slide"><a href="daikon.html"><div class="カルーセル画像"><img src="assets/images/daikon.png" style="height:140px; transform:rotate(110deg);"></div><p>だいこん</p></div></a>
+	  <div class="ホバー上 swiper-slide"><a href="gobou.html"><div class="カルーセル画像"><img src="assets/images/gobou.png" style="height:200px;"></div><p>ごぼう</p></div></a>
 	</div>
   </div>
   <div class="swiper-button-next"><i class="fa-solid fa-chevron-right"></i></div>
@@ -167,7 +167,7 @@
 
 <footer class="フッター">
 	<div class="ヘッダー子要素">
-		<div class="ロゴ"><a href="index.html"><img class="ロゴ" src="/assets/images/ヘッダー用ロゴ.png"></a></div>
+		<div class="ロゴ"><a href="index.html"><img class="ロゴ" src="/assets/images/headerrogo.png"></a></div>
 		<div class="メニュー">
 			<div class="メニューp"><a href="about.html">やさいのヒントとは？</a></div>
 			<div class="メニューp"><a href="main.html">保存方法一覧</a></div>
@@ -338,4 +338,3 @@ $(function() {
 
 </body>
 </html>
-
