--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <div id="ヘッダーfixed">
 	<div class="ヘッダー子要素fixed">
 		
-		<div class="ロゴ"><a href="index.html"><img class="ロゴ" src="/assets/images/headerrogo.png"></a></div>
+		<div class="ロゴ"><a href="index.html"><img class="ロゴ" src="assets/images/headerrogo.png"></a></div>
 		<div class="メニュー">
 			<div class="メニューp"><a href="about.html">やさいのヒントとは？</a></div>
 			<div class="メニューp"><a href="main.html">保存方法一覧</a></div>
@@ -85,7 +85,7 @@
 <div class="ヘッダー">
 
 		<div class="ヘッダー子要素 luxy-el" data-speed-y="40">
-			<div class="ロゴ"><a href="index.html"><img class="ロゴ" src="/assets/images/headerrogo.png"></a></div>
+			<div class="ロゴ"><a href="index.html"><img class="ロゴ" src="assets/images/headerrogo.png"></a></div>
 			<div class="メニュー">
 				<div class="メニューp"><a href="about.html">やさいのヒントとは？</a></div>
 				<div class="メニューp"><a href="main.html">保存方法一覧</a></div>
@@ -97,7 +97,7 @@
 <div class="メインビジュアル">
 	<div class="メインビジュアル画像">
 		<div class="タイトルロゴ luxy-el" data-speed-y="10" data-offset="0">
-			<img src="/assets/images/rogo.png">
+			<img src="assets/images/rogo.png">
 		</div>
 		<img class="やさい画像 なす レスポンシブ野菜大 luxy-el" data-speed-y="8" data-speed-x="4" data-horizontal="1" src="assets/images/nasu.png">
 		<img class="やさい画像 トマ レスポンシブ野菜大 luxy-el"  data-speed-y="8" data-speed-x="-4" data-horizontal="1" src="assets/images/tomato.png">
@@ -167,7 +167,7 @@
 
 <footer class="フッター">
 	<div class="ヘッダー子要素">
-		<div class="ロゴ"><a href="index.html"><img class="ロゴ" src="/assets/images/headerrogo.png"></a></div>
+		<div class="ロゴ"><a href="index.html"><img class="ロゴ" src="assets/images/headerrogo.png"></a></div>
 		<div class="メニュー">
 			<div class="メニューp"><a href="about.html">やさいのヒントとは？</a></div>
 			<div class="メニューp"><a href="main.html">保存方法一覧</a></div>
