--- a/gobou.html
+++ b/gobou.html
@@ -47,7 +47,7 @@
 
 <div id="ヘッダーfixed2">
 	<div class="ヘッダー子要素fixed">
-		<div class="ロゴ"><a href="index.html"><img class="ロゴ" src="/assets/images/headerrogo.png"></a></div>
+		<div class="ロゴ"><a href="index.html"><img class="ロゴ" src="assets/images/headerrogo.png"></a></div>
 		<div class="メニュー">
 			<div class="メニューp"><a href="about.html">やさいのヒントとは？</a></div>
 			<div class="メニューp"><a href="main.html">保存方法一覧</a></div>
@@ -85,14 +85,14 @@
 	<div class="セクション" style="width:100%;">
 			<span class="サブタイトル">BURDOCK</span>
 				<h2>ごぼう</h2>
-		<video class="動画" src="/assets/images/gobou.mp4"muted playsinline controls>
+		<video class="動画" src="assets/images/gobou.mp4"muted playsinline controls>
 		</video>
 		<a href="main.html"><div class="コンタクトボタン" style="margin-top:40px; width:100px;">一覧に戻る</div></a>
 		  </div>
 
 <footer class="フッター">
 	<div class="ヘッダー子要素">
-		<div class="ロゴ"><a href="index.html"><img class="ロゴ" src="/assets/images/headerrogo"></a></div>
+		<div class="ロゴ"><a href="index.html"><img class="ロゴ" src="assets/images/headerrogo"></a></div>
 		<div class="メニュー">
 			<div class="メニューp"><a href="about.html">やさいのヒントとは？</a></div>
 			<div class="メニューp"><a href="main.html">保存方法一覧</a></div>
