--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 <div class="メインビジュアル">
 	<div class="メインビジュアル画像">
 		<div class="タイトルロゴ luxy-el" data-speed-y="10" data-offset="0">
-			<img src="assets/images/rogo.png">
+			<img src="/assets/images/rogo.png">
 		</div>
 		<img class="やさい画像 なす レスポンシブ野菜大 luxy-el" data-speed-y="8" data-speed-x="4" data-horizontal="1" src="assets/images/nasu.png">
 		<img class="やさい画像 トマ レスポンシブ野菜大 luxy-el"  data-speed-y="8" data-speed-x="-4" data-horizontal="1" src="assets/images/tomato.png">
