--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
 	<span class="サブタイトル">ABOUT&nbspUS</span>
 	<h2>やさいのヒントとは？</h2>
 	<div class="about画像">
-		<div class="about1 luxy-el" data-speed-y="-2" data-speed-x="-2" data-horizontal="1" ><img src="assets/images/about1.png"><img class="about4" src="assets/images/about4.png" style="width:100px;"><div class="copy1"><img src="assets/images/about4.png" style="width:80px;"></div></div>
-		<div class="about2 luxy-el"  data-speed-y="-2" data-speed-x="2" data-horizontal="1"><img src="assets/images/about2.png"><img class="about5" src="assets/images/about5.png" style="width:70px;"><div class="copy2"><img src="assets/images/about5.png" style="width:55px;"></div></div>
+		<div class="about1 luxy-el" data-speed-y="-2" data-speed-x="-2" data-horizontal="1" ><img src="assets/images/about1.png"><img class="about4" src="assets/images/about4.png" style="width:100px;"><div class="copy1"><img src="assets/images/about4.png"></div></div>
+		<div class="about2 luxy-el"  data-speed-y="-2" data-speed-x="2" data-horizontal="1"><img src="assets/images/about2.png"><img class="about5" src="assets/images/about5.png" style="width:70px;"><div class="copy2"><img src="assets/images/about5.png"></div></div>
 		<img class="about3 luxy-el" data-speed-y="-2" data-offset="0" src="assets/images/about3.png">
 	</div>
 	<p>
