--- a/index.html
+++ b/index.html
@@ -209,10 +209,6 @@
 		});
 </script>
 
-<script>// luxy
-	luxy.init();
-</script> 
-
 <script>// スクロールアニメーション
 ScrollReveal().reveal(".セクション h2", { 
 	duration: 1700,     // アニメーション時間(ミリ秒)
@@ -335,6 +331,19 @@ $(function() {
 });
  
  </script>
+
+<script>//luxy
+
+if (navigator.userAgent.indexOf('iPhone') > 0 || navigator.userAgent.indexOf('Android') > 0 && navigator.userAgent.indexOf('Mobile') > 0) {
+    // スマートフォン向けの記述
+} else if (navigator.userAgent.indexOf('iPad') > 0 || navigator.userAgent.indexOf('Android') > 0) {
+    // タブレット向けの記述
+} else {
+    // PC向けの記述
+    luxy.init();
+}
+
+</script>
 
 </body>
 </html>
