--- a/about.html
+++ b/about.html
@@ -78,8 +78,8 @@
 
 <!-- メインコンテンツ -->
 <div id="luxy">
-
-	<div class="セクション width100" style="margin-top:50px;">
+	
+	<div class="セクション width100 コンタクトセクション4" style="margin-top:50px;">
 		<span class="サブタイトル">ABOUT&nbspUS</span>
 		<h2>やさいのヒントとは？</h2>
 		<div class="about画像">
@@ -95,8 +95,6 @@
 		</p>
 	</div>
 
-	<div class="コンタクトセクション4 luxy-el" data-speed-y="-15"></div>
-
 	<div class="セクション" style="width:100%; background-color:white;">
 		<span class="サブタイトル">HOW&nbspTO</span>
 		<h2>やさいのヒントの使い方</h2>
@@ -107,10 +105,10 @@
 		</div>
 	</div>
 
-	<div class="セクション">
+	<div class="セクション コンタクトセクション3">
 		<span class="サブタイトル">ABOUT&nbspME</span>
 		<h2>製作者について</h2>
-		<div class="aboutme">
+		<div class="aboutme luxy-el" data-speed-y="-2" style="margin-top:150px;">
 			<div class="私" style="margin-right:30px;"><img src="assets/images/me.jpg"></div>
 			<div class="自己紹介">
 				<h5 style="display:block; padding-left:30px; margin-top:-10px;">TAKAGI&nbspHIKARU</h5>
@@ -121,8 +119,6 @@
 			</div>
 		</div>
 	</div>
-
-	<div class="コンタクトセクション3 luxy-el" data-speed-y="8"></div>
 
 
 <footer class="フッター" style="margin-top:100px;">
