--- a/index.html
+++ b/index.html
@@ -155,15 +155,14 @@
 <a href="main.html"><div class="もっと見るボタン">もっと見る</div></a>
 </div>
 
-<div class="セクション">
+<div class="セクション コンタクトセクション2">
 	<span class="サブタイトル">CONTACT</span>
 	<h2>お問い合わせ</h2>
-	<div class="お問い合わせカード">
+	<div class="お問い合わせカード luxy-el" data-speed-y="-2" style="margin-top:150px;">
 		<div><p>お問い合わせやご依頼は、お気軽に以下のフォームからご連絡ください。<br>一週間以内に返信いたします。</p>
 			<a href="contact.html"><div class="コンタクトボタン">お問い合わせはこちら</div></a></div>
 	</div>
 </div>
-<div class="コンタクトセクション2 luxy-el" data-speed-y="8"></div>
 
 <footer class="フッター">
 	<div class="ヘッダー子要素">
