--- a/gobou.html
+++ b/gobou.html
@@ -29,7 +29,7 @@
 	<!-- フォーム -->
 	<script src="https://sdk.form.run/js/v2/embed.js"></script>
 </head>
-<body>
+<body style="background-image:url(assets/images/background_4.png); object-fit:cover; background-repeat:no-repeat; background-size:800px;">
 
 <!-- ローディング画面 -->
 <div class="loader-bg">
