--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
 <!-- メインコンテンツ -->
 <div id="luxy">
 	
-	<div class="セクション width100 コンタクトセクション4" style="margin-top:50px;">
+	<div class="セクション width100" style="margin-top:50px;">
 		<span class="サブタイトル">ABOUT&nbspUS</span>
 		<h2>やさいのヒントとは？</h2>
 		<div class="about画像">
