--- a/ninjin.html
+++ b/ninjin.html
@@ -29,7 +29,7 @@
 	<!-- フォーム -->
 	<script src="https://sdk.form.run/js/v2/embed.js"></script>
 </head>
-<body style="background-image:url(assets/images/background_dot.png); object-fit:cover; background-repeat:no-repeat; background-size:600px;">
+<body>
 
 <!-- ローディング画面 -->
 <div class="loader-bg">
