--- a/about.html
+++ b/about.html
@@ -108,7 +108,7 @@
 	<div class="セクション コンタクトセクション3">
 		<span class="サブタイトル">ABOUT&nbspME</span>
 		<h2>製作者について</h2>
-		<div class="aboutme luxy-el" data-speed-y="-2" style="margin-top:150px;">
+		<div class="aboutme luxy-el" data-speed-y="-2">
 			<div class="私" style="margin-right:30px;"><img src="assets/images/me.jpg"></div>
 			<div class="自己紹介">
 				<h5 style="display:block; padding-left:30px; margin-top:-10px;">TAKAGI&nbspHIKARU</h5>
@@ -121,7 +121,7 @@
 	</div>
 
 
-<footer class="フッター" style="margin-top:100px;">
+<footer class="フッター">
 	<div class="ヘッダー子要素">
 		<div class="ロゴ"><a href="index.html"><img class="ロゴ" src="assets/images/headerrogo.png"></a></div>
 		<div class="メニュー">
