--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 <a href="main.html"><div class="もっと見るボタン">もっと見る</div></a>
 </div>
 
-<div class="セクション コンタクトセクション2">
+<div class="セクション コンタクトセクション2" style="padding-bottom:0px;">
 	<span class="サブタイトル">CONTACT</span>
 	<h2>お問い合わせ</h2>
 	<div class="お問い合わせカード luxy-el" data-speed-y="-2">
