--- a/gobou.html
+++ b/gobou.html
@@ -87,7 +87,7 @@
 				<h2>ごぼう</h2>
 		<video class="動画" src="assets/images/gobou.mp4"muted playsinline controls>
 		</video>
-		<a href="main.html"><div class="コンタクトボタン" style="margin-top:40px; width:100px;">一覧に戻る</div></a>
+		<div class="コンタクトボタン" style="margin-top:40px; width:100px;"><a href="main.html">一覧に戻る</a></div>
 		  </div>
 
 <footer class="フッター">
