--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 <a href="main.html"><div class="もっと見るボタン">もっと見る</div></a>
 </div>
 
-<div class="セクション コンタクトセクション2" style="padding-bottom:0px;">
+<div class="セクション コンタクトセクション" style="padding-bottom:0px;">
 	<span class="サブタイトル">CONTACT</span>
 	<h2>お問い合わせ</h2>
 	<div class="お問い合わせカード luxy-el" data-speed-y="-2">
@@ -163,6 +163,7 @@
 			<a href="contact.html"><div class="コンタクトボタン">お問い合わせはこちら</div></a></div>
 	</div>
 </div>
+
 
 <footer class="フッター">
 	<div class="ヘッダー子要素">
