--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 		こんなお悩みはありませんか？<br>
 		このWEBサイトでは、野菜の適切な下処理と保存方法を動画形式で分かりやすく紹介しています。
 	</p>
-	<a href="about.html"><div class="もっと見るボタン">もっと見る</div></a>
+	<a class="もっと見るボタン" href="about.html">もっと見る</a>
 </div>
 
 <div class="セクション">
@@ -152,7 +152,7 @@
   <div class="swiper-button-prev"><i class="fa-solid fa-chevron-left"></i></div>
 </div>
 
-<a href="main.html"><div class="もっと見るボタン">もっと見る</div></a>
+<a class="もっと見るボタン" href="main.html">もっと見る</a>
 </div>
 
 <div class="セクション コンタクトセクション" style="padding-bottom:0px;">
@@ -160,7 +160,7 @@
 	<h2>お問い合わせ</h2>
 	<div class="お問い合わせカード luxy-el" data-speed-y="-2">
 		<div><p>お問い合わせやご依頼は、お気軽に以下のフォームからご連絡ください。<br>一週間以内に返信いたします。</p>
-			<a href="contact.html"><div class="コンタクトボタン">お問い合わせはこちら</div></a></div>
+			<a class="コンタクトボタン" href="contact.html">お問い合わせはこちら</a></div>
 	</div>
 </div>
 
