--- a/nasu.html
+++ b/nasu.html
@@ -85,7 +85,7 @@
 				<h2>なす</h2>
 		<video class="動画" src="assets/images/nasu.mp4"muted playsinline controls>
 		</video>
-		<div class="コンタクトボタン" style="margin-top:40px; width:100px;"><a href="main.html">一覧に戻る</a></div>
+		<a class="コンタクトボタン" href="main.html" style="margin-top:40px; width:100px;">一覧に戻る</a>
 		  </div>
 
 <footer class="フッター">
