--- a/main.html
+++ b/main.html
@@ -174,7 +174,7 @@ ScrollReveal().reveal(".野菜", {
 	duration: 1500,     // アニメーション時間(ミリ秒)
 	viewFactor: 0.5,    // 0〜1 画面のどれくらいが表示されたらアニメーションし始めるか
 	scale: '0.9',   // 下から
-	reset: true,        // 何回もアニメーションさせる
+	reset: false,        // 何回もアニメーションさせる
 })
 </script>
 
