--- a/burokori.html
+++ b/burokori.html
@@ -84,7 +84,7 @@
 	<div class="セクション" style="width:100%;">
 			<span class="サブタイトル">BROCCOLI</span>
 				<h2>ブロッコリー</h2>
-		<video class="動画" src="assets/images/burokori.mp4"muted playsinline controls>
+		<video class="動画" src="assets/images/burokori.mp4"playsinline controls>
 		</video>
 		<a class="コンタクトボタン" href="main.html" style="margin-top:40px; width:100px;">一覧に戻る</a>
 		  </div>
