--- a/daikon.html
+++ b/daikon.html
@@ -82,7 +82,7 @@
 	<div class="セクション" style="width:100%;">
 			<span class="サブタイトル">WHITE&nbspRADISH</span>
 				<h2>だいこん</h2>
-		<video class="動画" src="assets/images/daikon.mp4"muted playsinline controls>
+		<video class="動画" src="assets/images/daikon.mp4"playsinline controls>
 		</video>
 		<a class="コンタクトボタン" href="main.html" style="margin-top:40px; width:100px;">一覧に戻る</a>
 		  </div>
