--- a/gobou.html
+++ b/gobou.html
@@ -85,7 +85,7 @@
 	<div class="セクション" style="width:100%;">
 			<span class="サブタイトル">BURDOCK</span>
 				<h2>ごぼう</h2>
-		<video class="動画" src="assets/images/gobou.mp4"muted playsinline controls>
+		<video class="動画" src="assets/images/gobou.mp4"playsinline controls>
 		</video>
 		<a class="コンタクトボタン" href="main.html" style="margin-top:40px; width:100px;">一覧に戻る</a>
 		  </div>
