--- a/ninjin.html
+++ b/ninjin.html
@@ -83,7 +83,7 @@
 	<div class="セクション" style="width:100%;">
 			<span class="サブタイトル">CARROTS</span>
 				<h2>にんじん</h2>
-		<video class="動画" src="assets/images/ninjin.mp4"muted playsinline controls>
+		<video class="動画" src="assets/images/ninjin.mp4"playsinline controls>
 		</video>
 		<a class="コンタクトボタン" href="main.html" style="margin-top:40px; width:100px;">一覧に戻る</a>
 		  </div>
