--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@
 		</div>
 	</div>
 
-	<div class="セクション コンタクトセクション3">
+<!-- 	<div class="セクション コンタクトセクション3">
 		<span class="サブタイトル">ABOUT&nbspME</span>
 		<h2>製作者について</h2>
 		<div class="aboutme luxy-el" data-speed-y="-2">
@@ -119,7 +119,7 @@
 			</div>
 		</div>
 	</div>
-
+ -->
 
 
 <footer class="フッター">
