--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 	<!-- fontawesome -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<!-- luxy.js -->
-	<script type="text/javascript" src="js/luxy.min.js" charset="utf-8"></script>
+<!-- 	<script type="text/javascript" src="js/luxy.min.js" charset="utf-8"></script> -->
 	<!-- sclollanimation -->
 	<script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 	<!-- jquery -->
